# TestMatch

./: .clang-format  .gitattributes  .gitignore  CMakeLists.txt  README.md  TestMatch.sln  backend.vcxproj  pyproject.toml  readthedocs.yml  setup.cfg  setup.py  ~AutoRecover.backend.vcxproj
.github/workflows/: autotest-windows.yml  autotest.yml  build-and-test.yml  build-test.yml  checks.yml  codeql-analysis.yml  deploy.yml  generate_docs.yml  linter.yml  linters.yml  models.yml
Data Analysis/: NN Model.ipynb
Data Analysis/.ipynb_checkpoints/: Data Analysis-checkpoint.ipynb
Data Analysis/ML Model/: scrape_ballbyball.py
Data Analysis/data/: 01082019-AUSENG-1AUS.csv  01082019-AUSENG-2ENG.csv  01082019-AUSENG-3AUS.csv  01082019-AUSENG-4ENG.csv  03122019-NZLENG-1NZL.csv  03122019-NZLENG-2ENG.csv  03122019-NZLENG-3NZL.csv  04032017-INDAUS-1IND.csv  04092019-AUSENG-1AUS.csv  04092019-AUSENG-2ENG.csv  04092019-AUSENG-3AUS.csv  04092019-AUSENG.csv  level_keys.py  page_source.html  player_info_test.py  scorecard_scrape.py  scrape_all_games.py  scrape_ballbyball.py  scrape_batbowlavg.py  scrape_dicts.py  scrape_gameids.py  scrape_match.py  test.py  venues.csv
DataAnalysis/data/: match_scrape_psuedo.md  scrape_all_games_ballbyball.py  scrape_match.py  scrape_match_ballbyball.py
Documentation/: doco.aux  doco.synctex(busy)  uml_diagram.dvi
Simulation Backend/: Player.h
TestBackend/: Cards.cpp  Cards.h  Encoders.h  MatchTime.cpp  MatchTime.h  Parameters.h  Player.cpp  Player.h  Simulation.cpp  Simulation.h  TestBackend.cpp  TestBackend.vcxproj  TestBackend.vcxproj.filters  card_test.cpp  json_test.cpp
TestBackend/Tests/: arr_test.cpp  time_test.cpp
TestBackend/config/: australia.txt
TestBackend/rtnormCpp/: rtnorm.cpp
TestMatch/: TestMatch.vcxproj
TestMatchGUI/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui  scorecardviewer.cpp  scorecardviewer.h  scorecardviewer.ui
backend/: ClassDiagram.cd  backend.vcxproj  backend.vcxproj.filters  ctest_player.cpp
backend/include/: Cards.h  FileIO.h  MatchTime.h  Parameters.h  Player.h  Scorecard.h  Simulation.h  Utility.h
backend/models/: keras_bbb.onnx
backend/src/: Cards.cpp  FileIO.cpp  MatchTime.cpp  Player.cpp  Simulation.cpp
backend/test/: TestHelpers.h  ftest_utility.cpp  makefile  test.cpp  test_main.cpp  test_time.cpp  testh_cards.cpp  testh_fileio.cpp  testh_matchtime.cpp  testh_player.cpp  testh_utility.cpp  time_test.cpp
boost/boost-algorithm_x86-windows/: CONTROL
boost/boost-assert_x86-windows/: CONTROL
boost/boost-build_x86-windows/: CONTROL
boost/boost-compatibility_x86-windows/: CONTROL
boost/boost-config_x86-windows/: CONTROL
boost/boost-container_x86-windows/: CONTROL
boost/boost-core_x86-windows/: CONTROL
boost/boost-function-types_x86-windows/: CONTROL
boost/boost-function_x86-windows/: CONTROL
boost/boost-functional_x86-windows/: CONTROL
boost/boost-fusion_x86-windows/: CONTROL
boost/boost-intrusive_x86-windows/: CONTROL
boost/boost-io_x86-windows/: CONTROL
boost/boost-iterator_x86-windows/: CONTROL
boost/boost-optional_x86-windows/: CONTROL
boost/boost-regex_x86-windows/: CONTROL
boost/boost-static-assert_x86-windows/: CONTROL
boost/boost-type-index_x86-windows/: CONTROL
boost/boost-unordered_x86-windows/: CONTROL
boost/boost-vcpkg-helpers_x86-windows/: CONTROL
build-TestMatchGui-Desktop_Qt_6_0_1_MinGW_64_bit-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake
build-TestMatchGui-Desktop_Qt_6_0_1_MinGW_64_bit-Debug/TestMatchGui_autogen/: deps
cric_model/: BBB_NN.ipynb  bbb_cleaning.R  bbb_eda.Rmd  bbb_split.R  bbb_visualisation.Rmd  logistic_reg.R  nn.R  preprocess.py  py_nn_prep.R  svm.R  wkt_type_model.R
cric_model/.ipynb_checkpoints/: BBB_NN-checkpoint.ipynb  Wicket_ANN-checkpoint.ipynb
cric_model/R/: bbb_cleaning.R  bbb_eda.Rmd
cric_model/data/: TeamManager.py  byes_test_labs.csv  byes_test_preds.csv  byes_train_labs.csv  byes_train_preds.csv  dism_mode_test_labs.csv  dism_mode_test_preds.csv  dism_mode_train_labs.csv  dism_mode_train_preds.csv  is_wkt_test_labs.csv  is_wkt_train_labs.csv  legbyes_test_labs.csv  legbyes_test_preds.csv  legbyes_train_labs.csv  legbyes_train_preds.csv  noballs_test_labs.csv  noballs_test_preds.csv  noballs_train_labs.csv  noballs_train_preds.csv  outcome_test_labs.csv  runs_test_labs.csv  runs_train_labs.csv  scrape_all_games_players.py  scrape_match.py  scrape_players.py  scrape_stats_all.py  stats_modi.csv  stats_mtest.csv  stats_wodi.csv  wides_test_labs.csv  wides_test_preds.csv  wides_train_labs.csv  wides_train_preds.csv
data/: TestData.pyproj  data.pyproj  scrape_gameids.py
doc/: Doxyfile  conf.py  doco.tex  uml_diagram.tex
docs/: Doxyfile  conf.py  index.rst  requirements.txt
include/: Assorted.h  Cards.h  FileIO.h  MatchTime.h  Model.h  Player.h  Simulation.h  Utility.h  cards.h  cards.hpp  enums.h  fileio.h  helpers.h  helpers.hpp  models.h  simulation.h  simulation.hpp  team.h  team.hpp
models/: DESCRIPTION
python/: CMakeLists.txt  setup.py
sim/: MakeFile.mk  TestBackend.vcxproj  TestBackend.vcxproj.filters  makefile
src/: Cards.cpp  FileIO.cpp  MatchTime.cpp  Model.cpp  Player.cpp  Simulation.cpp  cards.cpp  enums.cpp  fileio.cpp  helpers.cpp  matchtime.cpp  models.cpp  pregame.cpp  simulation.cpp  team.cpp  time.cpp
src/cpp/bindings/: CMakeLists.txt  wrappers.cpp
test/: CMakeLists.txt  TestHelpers.h  demonstrative_test.cpp  makefile.mk  test_loosebuschange.tmpl  test_main.cpp  testh_cards.cpp  testh_matchtime.cpp  testh_player.cpp
test/cpp/: CMakeLists.txt
test/cpp/unit/: testh_cards.cpp  testh_helpers.cpp  testh_matchtime.cpp  testh_prediction.cpp  testh_simulation.cpp  testh_team.cpp  testtools.hpp
test/python/: conftest.py  test_cards.py  test_dataclasses.py  test_inputs.py  test_json.py
test/teams/: england.tmxi
test/unit/: fixtures.hpp  test_helpers.h  test_main.cpp  testh_cards.cpp  testh_helpers.cpp  testh_matchtime.cpp  testh_player.cpp  testh_pregame.cpp  testh_simulation.cpp  testh_team.cpp  testh_utility.cpp  testtools.hpp
(+1051 files in other folders)
